# redis-macros

./: Cargo.toml  README.md
crates/clia-redis-macros/: Cargo.toml  LICENSE-MIT
crates/clia-redis-macros/src/: lib.rs
crates/redis-json/: Cargo.toml  README.md
crates/redis-json/src/: error.rs  lib.rs  util.rs
